separate accessibility patches to a separate file and add an option/checkmark

--- a/index.html
+++ b/index.html
@@ -281,6 +281,19 @@
                 </label>
               </div>
               <div class="pure-u-1">
+                <input id="accessibility-patches" type="checkbox">
+                <label for="accessibility-patches">Apply accessibility patches
+                  <span class="tooltip-wrapper">
+                    <span class="tooltip-indicator">?</span>
+                    <span class="tooltip hidden">
+                      <span>
+                        Reduces screen flashing from use items.
+                      </span>
+                    </span>
+                  </span>
+                </label>
+              </div>
+              <div class="pure-u-1">
                 <input id="show-spoilers" type="checkbox">
                 <label for="show-spoilers">Show spoilers</label>
               </div>
@@ -692,6 +705,7 @@
     <script src="src/relics.js"></script>
     <script src="src/stats.js"></script>
     <script src="src/util.js"></script>
+    <script src="src/accessibility_patches.js"></script>
     <script src="src/randomize_stats.js"></script>
     <script src="src/randomize_relics.js"></script>
     <script src="src/randomize_items.js"></script>
