--- a/index.html
+++ b/index.html
@@ -319,8 +319,10 @@
       <h2><a name="links">Links</a></h2>
       <ul>
         <li><a href="/faq">FAQ</a></li>
-        <li><a href="https://taliczealot.github.io">Rando Tools</a>,
-          a collection of tools to enhance the randomizer experience.</li>
+        <li>
+          <a href="https://taliczealot.github.io/#/projects/sotnrandotools">Rando Tools</a>,
+          a collection of tools to enhance the randomizer experience.
+        </li>
         <li><a href="https://ppf.sotn.io">PPF Patcher [Browser version]</a></li>
         <li><a href="https://discord.gg/dzbKhQDjrs">The Long Library</a>,
           a SotN discord server with a dedicated <code>#randomizer</code>
