--- a/faq/index.html
+++ b/faq/index.html
@@ -53,7 +53,7 @@
             <a href="#extensions">question regarding location extensions</a>
             for more information.</p>
           <h3 id="complexity">What is complexity?</h3>
-          <p>A seed's complexity is the depth of its a progression tree. A
+          <p>A seed's complexity is the depth of its progression tree. A
             progression tree describes the order in which relics and items are
             accessed.</p>
           <p>For example, in the vanilla game, Jewel of Open is the
