Update rando tools link

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
       <ul>
         <li><a href="/faq">FAQ</a></li>
         <li>
-          <a href="https://taliczealot.github.io/#/projects/sotnrandotools">Rando Tools</a>,
+          <a href="https://taliczealot.github.io/#/apps/sotnrandotools">Rando Tools</a>,
           a collection of tools to enhance the randomizer experience.
         </li>
         <li><a href="https://ppf.sotn.io">PPF Patcher [Browser version]</a></li>
