Add relic visibility improvements to accessibility_patches

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                     <span class="tooltip-indicator">?</span>
                     <span class="tooltip hidden">
                       <span>
-                        Reduces screen flashing from use items.
+                        Reduces screen flashing from use items and adjusts some relics for better visibility.
                       </span>
                     </span>
                   </span>
