--- a/index.html
+++ b/index.html
@@ -718,6 +718,7 @@
     <script src="build/presets/og.js"></script>
     <script src="build/presets/guarded-og.js"></script>
     <script src="build/presets/speedrun.js"></script>
+    <script src="build/presets/race-lycan.js"></script>
     <script src="build/presets/bat-master.js"></script>
     <script src="build/presets/lycanthrope.js"></script>
     <script src="build/presets/warlock.js"></script>
