--- a/index.html
+++ b/index.html
@@ -274,6 +274,8 @@
                     <span class="tooltip hidden">
                       <span>
                         Prevents displaying the relic locations and solutions.
+                        Sets the library shop relic cost to 0.
+                        Permanently opens the clock room statue.
                         For use when racing.
                       </span>
                     </span>
@@ -343,6 +345,11 @@
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>March 15, 2023</time></h3>
+      <ul>
+        <li>Update tournament mode to include free shop relic and open clock
+          room statue.</li>
+      </ul>
       <h3><time>October 5, 2022</time></h3>
       <ul>
         <li>Prevent Clock Tower puzzle softlock in Equipment extension.</li>
