Add softlock patches to accessibility_patches and remove gear puzzle patch from randomize_relics

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                     <span class="tooltip-indicator">?</span>
                     <span class="tooltip hidden">
                       <span>
-                        Reduces screen flashing from use items and adjusts some relics for better visibility.
+                        Reduces screen flashing from use items, adjusts some relics for better visibility and patches some softlocks.
                       </span>
                     </span>
                   </span>
