--- a/index.html
+++ b/index.html
@@ -349,6 +349,8 @@
       <ul>
         <li>Update tournament mode to include free shop relic and open clock
           room statue.</li>
+        <li>Update accessibility mode to patch soft locks at Olrox, Scylla, and
+          Montaur & Werewolf.</li>
       </ul>
       <h3><time>October 5, 2022</time></h3>
       <ul>
