Implement optional starting zone randomization.

--- a/index.html
+++ b/index.html
@@ -721,6 +721,7 @@
     <script src="src/randomize_relics.js"></script>
     <script src="src/randomize_items.js"></script>
     <script src="src/randomize_music.js"></script>
+    <script src="src/randomize_starting_zone.js"></script>
     <script src="build/presets/casual.js"></script>
     <script src="build/presets/safe.js"></script>
     <script src="build/presets/adventure.js"></script>
