Add rat-race preset

--- a/index.html
+++ b/index.html
@@ -736,6 +736,7 @@
     <script src="build/presets/empty-hand.js"></script>
     <script src="build/presets/gem-farmer.js"></script>
     <script src="build/presets/third-castle.js"></script>
+    <script src="build/presets/rat-race.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
