--- a/index.html
+++ b/index.html
@@ -352,6 +352,10 @@
         <li>Update accessibility mode to patch soft locks at Olrox, Scylla, and
           Minotaur & Werewolf.</li>
       </ul>
+      <h3><time>April 2, 2023</time></h3>
+      <ul>
+        <li>Add Rat Race preset.</li>
+      </ul>
       <h3><time>October 5, 2022</time></h3>
       <ul>
         <li>Prevent Clock Tower puzzle softlock in Equipment extension.</li>
