mutat variabile culori

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
           href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css">
     <link rel="stylesheet"
           href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?u8vidh">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/variables.css">
+    <link rel="stylesheet" href="css/index.css">
   </head>
   <body>
     <div id="version"></div>
