--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
           href="https://d1azc1qln24ryf.cloudfront.net/114779/Socicon/style-cf.css?u8vidh">
     <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/darkmode.css">
+    <link rel="stylesheet" href="css/lightmode.css">
   </head>
   <body>
     <div id="version"></div>
