fixat css import pe faq

--- a/faq/index.html
+++ b/faq/index.html
@@ -6,7 +6,8 @@
           href="https://unpkg.com/purecss@1.0.0/build/pure-min.css">
     <link rel="stylesheet"
           href="https://unpkg.com/purecss@1.0.0/build/grids-responsive-min.css">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="../static/css/variables.css">
+    <link rel="stylesheet" href="../static/css/index.css">
     <link rel="stylesheet" href="/faq/index.css">
   </head>
   <body class="menu faq">
