inceput sa fac change log dinamic

--- a/index.html
+++ b/index.html
@@ -368,89 +368,33 @@
           channel.</li>
       </ul>
       <hr> -->
+      <!-- <section class="accordion accordion--radio">
+        <div class="tab">
+          <input type="radio" name="accordion-2" id="rd1">
+          <label for="rd1" class="tab__label">Radio</label>
+          <div class="tab__content">
+            <p>If you want to have only one tab open, you can use <code>&lt;input type="checkbox"&gt;</code>.</p>
+          </div>
+        </div>
+        <div class="tab">
+          <input type="radio" name="accordion-2" id="rd2">
+          <label for="rd2" class="tab__label">Open single</label>
+          <div class="tab__content">
+            <p>But if you wanna close the opened tab, you must add a "close" button somewhere, like the one below, that is just another styled radio input.</p>
+          </div>
+        </div>
+        <div class="tab">
+          <input type="radio" name="accordion-2" id="rd3">
+          <label for="rd3" class="tab__close">Close open tab &times;</label>
+        </div>
+      </section> -->
+      
       <h2><a name="changelog">Changelog</a></h2>
-      <h3><time>April 2, 2023</time></h3>
-      <ul>
-        <li>Add Rat Race preset.</li>
-      </ul>
-      <h3><time>March 15, 2023</time></h3>
-      <ul>
-        <li>Update tournament mode to include free shop relic and open clock
-          room statue.</li>
-        <li>Update accessibility mode to patch soft locks at Olrox, Scylla, and
-          Minotaur & Werewolf.</li>
-      </ul>
-      <h3><time>October 5, 2022</time></h3>
-      <ul>
-        <li>Prevent Clock Tower puzzle softlock in Equipment extension.</li>
-      </ul>
-      <h3><time>July 20, 2022</time></h3>
-      <ul>
-        <li>Add Warlock preset.</li>
-      </ul>
-      <h3><time>July 9, 2022</time></h3>
-      <ul>
-        <li>Add Expedition preset.</li>
-        <li>Add Lycanthrope preset.</li>
-      </ul>
-      <h3><time>April 20, 2022</time></h3>
-      <ul>
-        <li>Add Nimble preset.</li>
-      </ul>
-      <h3><time>April 2, 2022</time></h3>
-      <ul>
-        <li>Add Third Castle preset.</li>
-      </ul>
-      <h3><time>February 24, 2022</time></h3>
-      <ul>
-        <li>Fix stat randomization for club weapons.</li>
-      </ul>
-      <h3><time>January 11, 2022</time></h3>
-      <ul>
-        <li>Add Guarded O.G. preset.</li>
-      </ul>
-      <h3><time>December 26, 2021</time></h3>
-      <ul>
-        <li>Add Spread relic locations extension.</li>
-        <li>Add Bat Master preset.</li>
-      </ul>
-      <h3><time>May 17, 2021</time></h3>
-      <ul>
-        <li>Use Guarded relic locations for Casual preset.</li>
-      </ul>
-      <h3><time>April 27, 2021</time></h3>
-      <ul>
-        <li>Reject disc images that are not valid, vanilla backups.</li>
-      </ul>
-      <h3><time>April 2, 2021</time></h3>
-      <ul>
-        <li>Add Gem Farmer preset.</li>
-      </ul>
-      <h3><time>March 12, 2021</time></h3>
-      <ul>
-        <li>Add O.G. preset.</li>
-      </ul>
-      <h3><time>February 27, 2021</time></h3>
-      <ul>
-        <li>Add item stats randomization.</li>
-      </ul>
+      <section id="changelog">
+
+      </section>
+      
       <a id="show-older" href="#older">Show older changes</a>
-      <div id="older" class="hidden">
-        <h3><time>February 15, 2021</time></h3>
-        <ul>
-          <li>Add PPF output option.</li>
-        </ul>
-        <h3><time>February 7, 2021</time></h3>
-        <ul>
-          <li>Add Trio as a possible relic location in Guarded and Equipment
-            extensions.</li>
-        </ul>
-        <h3><time>January 18, 2021</time></h3>
-        <ul>
-          <li>Add Thrust Sword logic to Speedrun preset.</li>
-          <li>Increase minimum complexities for Safe and Adventure
-            presets.</li>
-        </ul>
         <h3><time>September 19, 2020</time></h3>
         <ul>
           <li>Add Tournament Mode.</li>
@@ -736,6 +680,7 @@
     <div id="dev-border"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.1/seedrandom.min.js"></script>
+    <script src="src/changelog.js"></script>
     <script src="src/constants.js"></script>
     <script src="src/enemies.js"></script>
     <script src="src/errors.js"></script>
