--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
   <body>
     <header>
       <div id="logo">
-        <a href="https://github.com/3snowp7im/SotN-Randomizer"><i></i></a>
+        <!-- icon from https://icons8.com/icons/set/github -->
+        <a title="Fork me on GitHub" href="https://github.com/3snowp7im/SotN-Randomizer"><i></i></a>
         <div>
+          <!-- sotn font taken from https://www.pentacom.jp/pentacom/bitfontmaker2/gallery/?id=862 -->
           <h1>Sotn Randomizer</h1>
           <h3 id="version">3.15.0-dev</h3>
         </div>
@@ -354,7 +356,6 @@
         <div id="loader"></div>
       </form>
       <div id="notification"><span>Copied to clipboard<span></div>
-      <hr>
       <!-- <h2><a name="links">Links</a></h2>
       <ul>
         <li><a href="/faq">FAQ</a></li>
@@ -389,292 +390,9 @@
         </div>
       </section> -->
       
-      <h2><a name="changelog">Changelog</a></h2>
-      <section id="changelog">
-
-      </section>
-      
-      <a id="show-older" href="#older">Show older changes</a>
-        <h3><time>September 19, 2020</time></h3>
-        <ul>
-          <li>Add Tournament Mode.</li>
-        </ul>
-        <h3><time>August 11, 2020</time></h3>
-        <ul>
-          <li>Add Scavenger preset.</li>
-        </ul>
-        <h3><time>August 7, 2020</time></h3>
-        <ul>
-          <li>Make Leap Stone a 0-relic check in Speedrun preset.</li>
-        </ul>
-        <h3><time>July 27, 2020</time></h3>
-        <ul>
-          <li>Add music randomizer.</li>
-        </ul>
-        <h3><time>July 10, 2020</time></h3>
-        <ul>
-          <li>Fix escape requirements not being honored when a location is
-            empty.</li>
-        </ul>
-        <h3><time>June 22, 2020</time></h3>
-        <ul>
-          <li>Add Jewel of Open + Soul of Wolf + Leap Stone as Gold Ring
-            location lock for Speedrun preset.</li>
-        </ul>
-        <h3><time>June 3, 2020</time></h3>
-        <ul>
-          <li>Fix duped progression item in Cave.</li>
-        </ul>
-        <h3><time>Map 26, 2020</time></h3>
-        <ul>
-          <li>Add Forbidden Library Opal location to Adventure preset.</li>
-        </ul>
-        <h3><time>April 30, 2020</time></h3>
-        <ul>
-          <li>Add Pixie singing "Nocturne" when sitting in a chair.</li>
-        </ul>
-        <h3><time>April 25, 2020</time></h3>
-        <ul>
-          <li>Increase worker performance.</li>
-          <li>Add <a href="/faq">FAQ</a>.</li>
-        </ul>
-        <h3><time>April 21, 2020</time></h3>
-        <ul>
-          <li>Add Jewel of Open + Soul of Wolf + Skill of Wolf to Gold Ring
-            location locks in Speedrun preset.</li>
-          <li>Fix missing cape color layer.</li>
-        </ul>
-        <h3><time>April 17, 2020</time></h3>
-        <ul>
-          <li>Add solutions to spoiler log.</li>
-          <li>Increase minimum complexities.</li>
-        </ul>
-        <h3><time>April 12, 2020</time></h3>
-        <ul>
-          <li>Prevent generation of seeds that softlock at Holy Glasses.</li>
-          <li>Show preset ID at file select menu.</li>
-          <li>Increase minimum complexities.</li>
-        </ul>
-        <h3><time>April 10, 2020</time></h3>
-        <ul>
-          <li>Add "Menu" theme.</li>
-        </ul>
-        <h3><time>April 8, 2020</time></h3>
-        <ul>
-          <li>Add multithreaded seed generation strategy.</li>
-        </ul>
-        <h3><time>April 5, 2020</time></h3>
-        <ul>
-          <li>Add Sprite and Nosedevil familiars in Guarded and Equipment
-            extensions.</li>
-        </ul>
-        <h3><time>April 3, 2020</time></h3>
-        <ul>
-          <li>Add Speedrun preset.</li>
-          <li>Randomize all cape colors.</li>
-          <li>Fix erasing Ring of Vlad location.</li>
-        </ul>
-        <h3><time>April 2, 2020</time></h3>
-        <ul>
-          <li>Add Adventure preset.</li>
-          <li>Add Empty hand preset.</li>
-          <li>Add night mode.</li>
-        </ul>
-        <h3><time>March 31, 2020</time></h3>
-        <ul>
-          <li>Fix exception when replacing Holy Glasses with relic.</li>
-        </ul>
-        <h3><time>March 30, 2020</time></h3>
-        <ul>
-          <li>Fix gold ring duping.</li>
-        </ul>
-        <h3><time>March 29, 2020</time></h3>
-        <ul>
-          <li>Fix progression item duping at relic bosses.</li>
-          <li>Fix missing progression item at Scylla.</li>
-        </ul>
-        <h3><time>March 28, 2020</time></h3>
-        <ul>
-          <li>Fix information leak of progression item randomization.</li>
-          <li>Fix progression item randomization in Outer Wall.</li>
-        </ul>
-        <h3><time>March 27, 2020</time></h3>
-        <ul>
-          <li>Add progression item randomization.</li>
-          <li>Fix icons of equipment stolen by Death.</li>
-        </ul>
-        <h3><time>March 17, 2020</time></h3>
-        <ul>
-          <li>Fix disappearing items.</li>
-        </ul>
-        <h3><time>March 15, 2020</time></h3>
-        <ul>
-          <li>Fix duping item that replaces Cube of Zoe.</li>
-        </ul>
-        <h3><time>March 13, 2020</time></h3>
-        <ul>
-          <li>Fix relic placement in miscellaneous presets.</li>
-          <li>Fix missing replacement item at Soul of Bat.</li>
-          <li>Add extra agony to agonize preset.</li>
-        </ul>
-        <h3><time>March 12, 2020</time></h3>
-        <ul>
-          <li>Add relic locations extension with new Guarded option.</li>
-          <li>Fix softlock in Lesser Demon fight.</li>
-        </ul>
-        <h3><time>March 4, 2020</time></h3>
-        <ul>
-          <li>Add Joseph's Cloak color randomization to Turkey Mode.</li>
-        </ul>
-        <h3><time>February 27, 2020</time></h3>
-        <ul>
-          <li>Fix relic duping when performing glitches.</li>
-        </ul>
-        <h3><time>February 5, 2020</time></h3>
-        <ul>
-          <li>Update links section.</li>
-        </ul>
-        <h3><time>October 26, 2019</time></h3>
-        <ul>
-          <li>"The Manly Update": Add Jewel + Power + Wolf to locks on Demon
-            Card location.</li>
-          <li>Add extra agony to agonize preset.</li>
-        </ul>
-        <h3><time>October 1, 2019</time></h3>
-        <ul>
-          <li>Fix some candles not being randomized.</li>
-          <li>Add extra agony to agonize preset.</li>
-        </ul>
-        <h3><time>August 15, 2019</time></h3>
-        <ul>
-          <li>Fix crash related to transfering data to web worker.</li>
-        </ul>
-        <h3><time>August 11, 2019</time></h3>
-        <ul>
-          <li>Fix uncurse being placed in random candles.</li>
-          <li>Add support for custom enemy drops from enemies that have no
-            vanilla drops.</li>
-        </ul>
-        <h3><time>May 23, 2019</time></h3>
-        <ul>
-          <li>Add support for custom enemy drops, starting equipment, item
-            locations, and prologue rewards.</li>
-          <li>Deprecate relic logic selector in favor of
-            <a href="https://github.com/3snowp7im/SotN-Randomizer#presets">presets</a>.</li>
-        </ul>
-        <h3><time>May 11, 2019</time></h3>
-        <ul>
-          <li>Add selector for built-in relic logic schemes.</li>
-        </ul>
-        <h3><time>May 8, 2019</time></h3>
-        <ul>
-          <li>Add support for custom relic logic.</li>
-        </ul>
-        <h3><time>May 3, 2019</time></h3>
-        <ul>
-          <li>Add file input as alternative to drag API.</li>
-        </ul>
-        <h3><time>April 30, 2019</time></h3>
-        <ul>
-          <li>Use web worker.</li>
-        </ul>
-        <h3><time>April 28, 2019</time></h3>
-        <ul>
-          <li>Add drop randomization.</li>
-        </ul>
-        <h3><time>April 23, 2019</time></h3>
-        <ul>
-          <li>Add checksum verification.</li>
-        </ul>
-        <h3><time>April 22, 2019</time></h3>
-        <ul>
-          <li>Add turkey mode.</li>
-        </ul>
-        <h3><time>April 20, 2019</time></h3>
-        <ul>
-          <li>Add candle randomization.</li>
-          <li>Add prologue reward item randomization.</li>
-          <li>Add Axe Lord and Luck Mode starting equipment
-            randomization.</li>
-          <li>Add copy seed button.</li>
-        </ul>
-        <h3><time>April 15, 2019</time></h3>
-        <ul>
-          <li>Display seed at file select menu.</li>
-          <li>Distribute jewel types with same frequency as vanilla.</li>
-        </ul>
-        <h3><time>April 14, 2019</time></h3>
-        <ul>
-          <li>Add option to show relic locations in spoilers.</li>
-        </ul>
-        <h3><time>April 13, 2019</time></h3>
-        <ul>
-          <li>Fix Maria cutscene skip in Richter mode.</li>
-        </ul>
-        <h3><time>April 11, 2019</time></h3>
-        <ul>
-          <li>Remove Maria cutscene in Marble Gallery to avoid confusion.</li>
-          <li>Add spoilers option.</li>
-        </ul>
-        <h3><time>April 8, 2019</time></h3>
-        <ul>
-          <li>Fix bug that allowed salable gems to be sold in shop menu.</li>
-          <li>Items are now placed by type with same frequency as
-            vanilla.</li>
-        </ul>
-        <h3><time>April 7, 2019</time></h3>
-        <ul>
-          <li>Add item location randomization.</li>
-        </ul>
-        <h3><time>April 5, 2019</time></h3>
-        <ul>
-          <li>Add <a href="relics">relic distribution</a>
-            (thx Soba)</li>
-          <li>Fix relic duping in Medusa room.</li>
-          <li>Fix shop relic name not being updated in shop menu.</li>
-          <li>Produce more uniform relic distribution (thx Soba).</li>
-        </ul>
-        <h3><time>April 4, 2019</time></h3>
-        <ul>
-          <li>Remove Maria cutscene in Alchemy Lab to avoid softlock.</li>
-          <li>Fix 2nd castle relic locations (thx Soba).</li>
-          <li>Fix randomized equipment by same type.</li>
-        </ul>
-        <h3><time>April 3, 2019</time></h3>
-        <ul>
-          <li>Fix random seed not being reproducible.</li>
-          <li>Fix crash after Scylla fight.</li>
-          <li>Fix faerie scroll duping.</li>
-          <li>Fix same seed causes different randomizations.</li>
-        </ul>
-        <h3><time>April 2, 2019</time></h3>
-        <ul>
-          <li>Fix equipment randomization.</li>
-          <li>
-            Fix bug that allowed bat relic to be placed in 2nd castle without
-            ability to get spike breaker armor.
-          </li>
-          <li>Download file name contains seed value.</li>
-        </ul>
-        <h3><time>April 1, 2019</time></h3>
-        <ul>
-          <li>Fix shop relic glitch.</li>
-          <li>Fix relic duping in clock tower and outer wall.</li>
-        </ul>
-        <h3><time>March 31, 2019</time></h3>
-        <ul>
-          <li>Add equipment location randomization.</li>
-        </ul>
-        <h3><time>March 28, 2019</time></h3>
-        <ul>
-          <li>Add starting equipment randomization.</li>
-        </ul>
-        <h3><time>March 27, 2019</time></h3>
-        <ul>
-          <li>Ported setz's
-            <a href="https://github.com/josephstevenspgh/SotN-Relic-Randomizer">relic randomizer</a>
-            to javascript.</li>
-        </ul>
+        <h2><a name="changelog">Changelog</a></h2>
+        <!-- source of inspiration https://codepen.io/raubaca/pen/PZzpVe -->
+        <section id="changelog"></section>
       </div>
     </main>
     <div id="dev-border"></div>
