Update index.html Adding Magic Max Mode

--- a/index.html
+++ b/index.html
@@ -283,6 +283,19 @@
                 </label>
               </div>
               <div class="pure-u-1">
+                <input id="magicmax-mode" type="checkbox">
+                <label for="magicmax-mode">Magic Max mode
+                  <span class="tooltip-wrapper">
+                    <span class="tooltip-indicator">?</span>
+                    <span class="tooltip hidden">
+                      <span>
+                        Replace Heart Max Up with Magic Max Up.
+                      </span>
+                    </span>
+                  </span>
+                </label>
+              </div>
+              <div class="pure-u-1">
                 <input id="accessibility-patches" type="checkbox">
                 <label for="accessibility-patches">Apply accessibility patches
                   <span class="tooltip-wrapper">
