Update index.html Add Anti-Freeze Mode

--- a/index.html
+++ b/index.html
@@ -296,6 +296,19 @@
                 </label>
               </div>
               <div class="pure-u-1">
+                <input id="antifreeze-mode" type="checkbox">
+                <label for="antifreeze-mode">Anti-Freeze mode
+                  <span class="tooltip-wrapper">
+                    <span class="tooltip-indicator">?</span>
+                    <span class="tooltip hidden">
+                      <span>
+                        Remove screen freezes on level-up, relic and vessel acquisition.
+                      </span>
+                    </span>
+                  </span>
+                </label>
+              </div>
+              <div class="pure-u-1">
                 <input id="accessibility-patches" type="checkbox">
                 <label for="accessibility-patches">Apply accessibility patches
                   <span class="tooltip-wrapper">
