Update index.html Add Color Rando Option

--- a/index.html
+++ b/index.html
@@ -283,6 +283,19 @@
                 </label>
               </div>
               <div class="pure-u-1">
+                <input id="colorrando-mode" type="checkbox">
+                <label for="colorrando-mode">Color Rando mode
+                  <span class="tooltip-wrapper">
+                    <span class="tooltip-indicator">?</span>
+                    <span class="tooltip hidden">
+                      <span>
+                        Randomize various color palettes. Ex: Cape colors, gravity boots trails, hydrostorm.
+                      </span>
+                    </span>
+                  </span>
+                </label>
+              </div>
+              <div class="pure-u-1">
                 <input id="magicmax-mode" type="checkbox">
                 <label for="magicmax-mode">Magic Max mode
                   <span class="tooltip-wrapper">
