Update index.html Add Preset Boss Rush

--- a/index.html
+++ b/index.html
@@ -783,6 +783,7 @@
     <script src="build/presets/rat-race.js"></script>
     <script src="build/presets/magic-mirror.js"></script>
     <script src="build/presets/leg-day.js"></script>
+    <script src="build/presets/boss-rush.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
