--- a/index.html
+++ b/index.html
@@ -784,6 +784,7 @@
     <script src="build/presets/magic-mirror.js"></script>
     <script src="build/presets/leg-day.js"></script>
     <script src="build/presets/boss-rush.js"></script>
+    <script src="build/presets/aperture.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
