--- a/index.html
+++ b/index.html
@@ -785,6 +785,9 @@
     <script src="build/presets/leg-day.js"></script>
     <script src="build/presets/boss-rush.js"></script>
     <script src="build/presets/aperture.js"></script>
+    <script src="build/presets/bountyhunter.js"></script>
+    <script src="build/presets/bountyhunter-tc.js"></script>
+    <script src="build/presets/hitman.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
