Update index.html Updating ChangeLog

--- a/index.html
+++ b/index.html
@@ -384,6 +384,24 @@
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>June 5, 2024 to Unknown 2023</time></h3>
+      <ul>
+        <li>Added Doppleganger's capes, Gravity Boots trails, and Hydrostorm color rando.</li>
+        <li>Separated color rando from Turkey mode.</li>
+        <li>Patch for Clear Game status without having a Clear File on memory card.</li>
+        <li>New patch to add back Japan-only Sprite and Nosedevil Cards to menu.</li>
+        <li>Added Magic Max Up option to replace Heart Max Up.</li>
+        <li>Added Anti-Freeze option to remove freeze on pickup of relic or max up and on level up.</li>
+        <li>Added Tourist and Wanderer location extensions.</li>
+        <li>Added presets including Magic Mirror, Leg Day, Boss Rush, Big Toss, Aperture and more.</li>
+        <li>Patch Clock Room softlock.</li>
+        <li>Removed Estoc from pool of Thrust Swords in logic.</li>
+        <li>Backend ~ Improved data write system for non-userdata auto skip.</li>
+        <li>Backend ~ Added Random options (random1, random3, random10, random99, and randomrelic) for preset writes.</li>
+        <li>Backend ~ Removed space after Spectral Sword in enemies.js which was causing errors.</li>
+        <li>Backend ~ Added new item replacement list parameter & Fixed item aliasing issues.</li>
+        <li>Probably some other small things.</li>
+      </ul>
       <h3><time>April 2, 2023</time></h3>
       <ul>
         <li>Add Rat Race preset.</li>
