Update index.html Updating Changelog

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
-      <h3><time>June 5, 2024 to Unknown 2023</time></h3>
+      <h3><time>June 5, 2024</time></h3>
       <ul>
         <li>Added Doppleganger's capes, Gravity Boots trails, and Hydrostorm color rando.</li>
         <li>Separated color rando from Turkey mode.</li>
@@ -400,7 +400,8 @@
         <li>Backend ~ Added Random options (random1, random3, random10, random99, and randomrelic) for preset writes.</li>
         <li>Backend ~ Removed space after Spectral Sword in enemies.js which was causing errors.</li>
         <li>Backend ~ Added new item replacement list parameter & Fixed item aliasing issues.</li>
-        <li>Probably some other small things.</li>
+        <li>And more!</li>
+        <li>The listed above were added between the last log and the date above.</li>
       </ul>
       <h3><time>April 2, 2023</time></h3>
       <ul>
