Update index.html Updating Links, Adding Version Number

--- a/index.html
+++ b/index.html
@@ -370,6 +370,8 @@
       </form>
       <div id="notification"><span>Copied to clipboard<span></div>
       <hr>
+      <h2><a name="version">Version 3.16.0</a></h2>
+      <hr>
       <h2><a name="links">Links</a></h2>
       <ul>
         <li><a href="/faq">FAQ</a></li>
@@ -381,6 +383,9 @@
         <li><a href="https://discord.gg/dzbKhQDjrs">The Long Library</a>,
           a SotN discord server with a dedicated <code>#randomizer</code>
           channel.</li>
+	      <li><a href="https://www.symphonyrando.fun">SymphonyRando.Fun</a>,
+          SotN Randomizer Database, containing tutorials, glossaries, and breakdowns.</li>
+      </ul>
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
