--- a/index.html
+++ b/index.html
@@ -809,6 +809,7 @@
     <script src="build/presets/leg-day.js"></script>
     <script src="build/presets/boss-rush.js"></script>
     <script src="build/presets/aperture.js"></script>
+    <script src="build/presets/big-toss.js"></script>
     <script src="build/presets/bountyhunter.js"></script>
     <script src="build/presets/bountyhunter-tc.js"></script>
     <script src="build/presets/hitman.js"></script>
