Update main site to add new presets
Also added Launcher link and fixed PPF site link

--- a/index.html
+++ b/index.html
@@ -391,12 +391,14 @@
           <a href="https://taliczealot.github.io/#/apps/sotnrandotools">Rando Tools</a>,
           a collection of tools to enhance the randomizer experience.
         </li>
-        <li><a href="https://ppf.sotnrando.net">PPF Patcher [Browser version]</a></li>
+        <li><a href="https://ppf.sotn.io">PPF Patcher [Browser version]</a></li>
         <li><a href="https://discord.gg/dzbKhQDjrs">The Long Library</a>,
           a SotN discord server with a dedicated <code>#randomizer</code>
           channel.</li>
 	      <li><a href="https://www.symphonyrando.fun">SymphonyRando.Fun</a>,
           SotN Randomizer Database, containing tutorials, glossaries, and breakdowns.</li>
+        <li><a href="https://github.com/LuciaRolon/SotNRandomizerLauncher/releases">SotNRandomizerLauncher</a>,
+          A PC-based launcher for the randomizer that helps you get started.</li>
       </ul>
       </ul>
       <hr>
@@ -667,7 +669,7 @@
           <li>Add support for custom enemy drops, starting equipment, item
             locations, and prologue rewards.</li>
           <li>Deprecate relic logic selector in favor of
-            <a href="https://github.com/sotnrando.netp7im/SotN-Randomizer#presets">presets</a>.</li>
+            <a href="https://github.com/eldri7ch2/SotN-Randomizer#presets">presets</a>.</li>
         </ul>
         <h3><time>May 11, 2019</time></h3>
         <ul>
@@ -822,9 +824,17 @@
     <script src="build/presets/boss-rush.js"></script>
     <script src="build/presets/aperture.js"></script>
     <script src="build/presets/big-toss.js"></script>
-    <script src="build/presets/bountyhunter.js"></script>
-    <script src="build/presets/bountyhunter-tc.js"></script>
-    <script src="build/presets/hitman.js"></script>
+    <!<script src="build/presets/bountyhunter.js"></script>>
+    <!<script src="build/presets/bountyhunter-tc.js"></script>>
+    <!<script src="build/presets/hitman.js"></script>>
+    <script src="build/presets/beyond.js"></script>
+    <script src="build/presets/breach.js"></script>
+    <script src="build/presets/grand-tour.js"></script>
+    <script src="build/presets/crash-course.js"></script>
+    <script src="build/presets/forge.js"></script>
+    <script src="build/presets/lookingglass.js"></script>
+    <script src="build/presets/skinwalker.js"></script>
+    <script src="build/presets/summoner.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
