--- a/index.html
+++ b/index.html
@@ -425,6 +425,11 @@
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>June 10, 2024</time></h3>
+      <ul>
+        <li>Added Agonize 2020 preset. Simulates the Agonize preset just prior to 3/27/2020.</li>
+        <li>Replaced Glitch preset with optimized Glitch Remastered. Reduces load times for the preset and adds logic for more glitches/exploits. Glitch Legacy is still a JSON in files.</li>
+      </ul>
       <h3><time>June 8, 2024</time></h3>
       <ul>
         <li>Added map color feature for CLI.</li>
@@ -862,6 +867,7 @@
     <script src="build/presets/lookingglass.js"></script>
     <script src="build/presets/skinwalker.js"></script>
     <script src="build/presets/summoner.js"></script>
+    <script src="build/presets/agonizetwtw.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
