Update Index.html to include the new presets

--- a/index.html
+++ b/index.html
@@ -428,6 +428,8 @@
       <h3><time>June 10, 2024</time></h3>
       <ul>
         <li>Added Agonize 2020 preset. Simulates the Agonize preset just prior to 3/27/2020.</li>
+        <li>Added Season 2 Safe preset. Simulates the Safe logic from Season 2.</li>
+        <li>Added Opwn preset. Simulates the Season 3 Safe with open shortcuts and teleporters with a few conveniences.</li>
         <li>Replaced Glitch preset with optimized Glitch Remastered. Reduces load times for the preset and adds logic for more glitches/exploits. Glitch Legacy is still a JSON in files.</li>
       </ul>
       <h3><time>June 8, 2024</time></h3>
@@ -868,6 +870,8 @@
     <script src="build/presets/skinwalker.js"></script>
     <script src="build/presets/summoner.js"></script>
     <script src="build/presets/agonizetwtw.js"></script>
+    <script src="build/presets/stwosafe.js"></script>
+    <script src="build/presets/open.js"></script>
     <script src="build/presets/index.js"></script>
     <script src="src/worker.js"></script>
     <script src="src/browser.js"></script>
