Update index.html Fixed Typo

--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
       <ul>
         <li>Added Agonize 2020 preset. Simulates the Agonize preset just prior to 3/27/2020.</li>
         <li>Added Season 2 Safe preset. Simulates the Safe logic from Season 2.</li>
-        <li>Added Opwn preset. Simulates the Season 3 Safe with open shortcuts and teleporters with a few conveniences.</li>
+        <li>Added Open preset. Simulates the Season 3 Safe with open shortcuts and teleporters with a few conveniences.</li>
         <li>Replaced Glitch preset with optimized Glitch Remastered. Reduces load times for the preset and adds logic for more glitches/exploits. Glitch Legacy is still a JSON in files.</li>
       </ul>
       <h3><time>June 8, 2024</time></h3>
