Update index.html Enabled BountyHunter Presets

--- a/index.html
+++ b/index.html
@@ -858,9 +858,10 @@
     <script src="build/presets/boss-rush.js"></script>
     <script src="build/presets/aperture.js"></script>
     <script src="build/presets/big-toss.js"></script>
-    <!<script src="build/presets/bountyhunter.js"></script>>
-    <!<script src="build/presets/bountyhunter-tc.js"></script>>
-    <!<script src="build/presets/hitman.js"></script>>
+    <script src="build/presets/bountyhunter.js"></script>
+    <script src="build/presets/bountyhunter-tc.js"></script>
+    <script src="build/presets/hitman.js"></script>
+    <script src="build/presets/chaos-lite.js"></script>
     <script src="build/presets/beyond.js"></script>
     <script src="build/presets/breach.js"></script>
     <script src="build/presets/grand-tour.js"></script>
