--- a/index.html
+++ b/index.html
@@ -425,11 +425,15 @@
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>June 11, 2024</time></h3>
+      <ul>
+        <li>Added Bounty Hunter, Hitman, Chaos Lite, and Bounty Hunter - Target Confirmed. All of these need to be applied to the BIN and then use <a href="https://github.com/MottZilla/BountyHunterTool/releases/">MottZilla's Bounty Hunter Tool</a> to patch the enemy drops.</li>
+      </ul>
       <h3><time>June 10, 2024</time></h3>
       <ul>
         <li>Added Agonize 2020 preset. Simulates the Agonize preset just prior to 3/27/2020.</li>
         <li>Added Season 2 Safe preset. Simulates the Safe logic from Season 2.</li>
-        <li>Added Opwn preset. Simulates the Season 3 Safe with open shortcuts and teleporters with a few conveniences.</li>
+        <li>Added Open preset. Simulates the the resulting preset if Safe with open shortcuts and teleporters was finalized with a few conveniences.</li>
         <li>Replaced Glitch preset with optimized Glitch Remastered. Reduces load times for the preset and adds logic for more glitches/exploits. Glitch Legacy is still a JSON in files.</li>
       </ul>
       <h3><time>June 8, 2024</time></h3>
