--- a/index.html
+++ b/index.html
@@ -421,10 +421,16 @@
           SotN Randomizer Database, containing tutorials, glossaries, and breakdowns.</li>
         <li><a href="https://github.com/LuciaRolon/SotNRandomizerLauncher/releases">SotNRandomizerLauncher</a>,
           A PC-based launcher for the randomizer that helps you get started.</li>
+        <li><a href="https://github.com/MottZilla/BountyHunterTool/releases/">Bounty Hunter Tool</a>,
+          The key ingredient in the highly popular Bounty Hunter preset.</li>
       </ul>
       </ul>
       <hr>
       <h2><a name="changelog">Changelog</a></h2>
+      <h3><time>July 10, 2024</time></h3>
+      <ul>
+        <li>Updated Glitch to remove guaranteed Duplicator, made preset-associated items infinite, made Heart Refresh animation faster.</li>
+      </ul>
       <h3><time>June 11, 2024</time></h3>
       <ul>
         <li>Added Bounty Hunter, Hitman, Chaos Lite, and Bounty Hunter - Target Confirmed. All of these need to be applied to the BIN and then use <a href="https://github.com/MottZilla/BountyHunterTool/releases/">MottZilla's Bounty Hunter Tool</a> to patch the enemy drops.</li>
